// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockQuote component should render correctly 1`] = `
<div>
  <blockquote
    class="blockQuote"
  />
</div>
`;

exports[`BlockQuote component should support passing children into the component 1`] = `
<div>
  <blockquote
    class="blockQuote"
  >
    This is a block quote
  </blockquote>
</div>
`;

exports[`BlockQuote component should support passing multiple children into the component 1`] = `
<div>
  <blockquote
    class="blockQuote"
  >
    <p>
      This is a block quote
    </p>
    <p>
      This is a block quote
    </p>
  </blockquote>
</div>
`;
